<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General Strings -->
    <string name="app_name">Rove</string>
    <string name="rove_logo">Logo</string>

        <!-- LoginActivity -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="menu_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register">Register</string>
    
    <!-- MainActivity -->
    <string name="feed_section">Feed</string>
    <string name="map_section">Map</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_add">Add</string>
    <string name="local">Local</string>
    <string name="server">Server</string>
    <string name="sort">Sort</string>
    <string name="popup_menu">Popup Menu</string>

    <!-- NewPostActivity -->
    <string name="username">Username:</string>
    <string name="lat">Latitude:</string>
    <string name="lng">Longitude:</string>
    <string name="msg">Message:</string>
    <string name="submit">Submit</string>
    <string name="submit_to_server">Submit to Server</string>
    <string name="get_location">Get Location</string>

    <!-- FeedFragment ListView Item -->
    <string name="ic_pin">Pin Icon</string>
    <string name="menu_logout">Logout</string>
    <string name="row_distance_name">Distance </string>
    <string name="row_address_name">Address </string>
    
   	<!-- NewUserActivity -->
    <string name="title_activity_new_user">Register User</string>
    <string name="new_name">Name:</string>
    <string name="new_username">Username:</string>
    <string name="new_email">Email:</string>
    <string name="new_password">Password:</string>
    <string name="new_confirm">Confirm Password:</string>
    <string name="error_password_mismatch">Password does not match</string>

</resources>
