<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:onClick="registerNewUser"
    tools:context=".NewUserActivity" >

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameTextView"
        android:layout_below="@+id/userNameEditText"
        android:layout_marginTop="18dp"
        android:text="@string/new_email" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/emailTextView"
        android:layout_alignBottom="@+id/emailTextView"
        android:layout_alignLeft="@+id/userNameEditText"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/userNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userNameTextView"
        android:layout_alignBottom="@+id/userNameTextView"
        android:layout_toRightOf="@+id/userNameTextView"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/userNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/realNameEditText"
        android:layout_marginTop="19dp"
        android:text="@string/new_username" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passowrdTextView"
        android:layout_alignBottom="@+id/passowrdTextView"
        android:layout_alignLeft="@+id/emailEditText"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/confirmPasswordTextView"
        android:layout_alignBottom="@+id/confirmPasswordTextView"
        android:layout_alignLeft="@+id/passwordEditText"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/realNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameTextView"
        android:layout_alignParentTop="true"
        android:layout_marginTop="59dp"
        android:text="@string/new_name" />

    <EditText
        android:id="@+id/realNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/realNameTextView"
        android:layout_alignBottom="@+id/realNameTextView"
        android:layout_toRightOf="@+id/userNameTextView"
        android:ems="10" />

    <TextView
        android:id="@+id/passowrdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/emailTextView"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="17dp"
        android:text="@string/new_password" />

    <TextView
        android:id="@+id/confirmPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/passowrdTextView"
        android:layout_below="@+id/passwordEditText"
        android:layout_marginTop="17dp"
        android:layout_toLeftOf="@+id/confirmPasswordEditText"
        android:text="@string/new_confirm" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/emailEditText"
        android:layout_below="@+id/confirmPasswordTextView"
        android:layout_marginTop="25dp"
        android:onClick="registerNewUser"
        android:text="@string/register" />

</RelativeLayout>