<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/maincontainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background"
    android:weightSum="2" >

    <ImageView
        android:id="@+id/popup_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:contentDescription="@string/popup_menu"
        android:visibility="invisible" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/emptyView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            tools:ignore="MergeRootFrame" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/detailmapinfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="4dp" >

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/transparent_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:orientation="vertical" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/detailmapinfo_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_background"
            android:clickable="true"
            android:orientation="vertical" >

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/post_shadow"
                android:orientation="vertical"
                android:paddingBottom="2dp"
                android:paddingRight="2dp" >

                <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/post_shape"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:weightSum="1" >

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/post_shape"
                            android:orientation="vertical" >

                            <TextView
                                android:id="@+id/detail_map_user"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:hint="@string/username"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_user_display"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_latitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:hint="@string/lat"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_latitude_display"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_longitude"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:hint="@string/lng"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_longitude_display"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_message"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:hint="@string/msg"
                                android:textSize="34sp" />

                            <TextView
                                android:id="@+id/detail_map_message_display"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="20"
                                android:textSize="34sp" />

                            <EditText
                                android:id="@+id/comment_edit_text"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Add a comment" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>